@@ -47,11 +47,13 @@ Dist::Zilla::Plugin::Test::ReportPrereqs = 0
 Dist::Zilla::Plugin::TravisCI = 0 
 Dist::Zilla::Plugin::CopyrightYearFromGit = 0
 Dist::Zilla::Plugin::CopyFilesFromBuild = 0.170880
+Dist::Zilla::Plugin::GitHubREADME::Badge = 0.23
 
 [ModuleShareDirs]
 Dist::Zilla::MintingProfile::Author::YANICK = share/profiles
 
 [@YANICK]
 include_dotfiles = 1
+badge = kwalitee
 
 [VerifyPhases]
